--- a/.github/workflows/log_release_downloads.yml
+++ b/.github/workflows/log_release_downloads.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add metrics/downloads_log.csv
+          git add metrics/downloads_log_jst.csv
           git commit -m "chore: log release download counts" || exit 0
           git push
